--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +17,7 @@
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
